# designpattern 模块：每个 demo 自成独立可执行文件

add_executable(singleton_demo singleton_demo.cpp)
add_executable(factory_method_demo factory_method_demo.cpp)
add_executable(abstract_factory_demo abstract_factory_demo.cpp)
add_executable(builder_demo builder_demo.cpp)
add_executable(prototype_demo prototype_demo.cpp)
add_executable(adapter_demo adapter_demo.cpp)
add_executable(bridge_demo bridge_demo.cpp)
add_executable(composite_demo composite_demo.cpp)
add_executable(decorator_demo decorator_demo.cpp)
add_executable(facade_demo facade_demo.cpp)
add_executable(flyweight_demo flyweight_demo.cpp)
add_executable(proxy_demo proxy_demo.cpp)
add_executable(chain_of_responsibility_demo chain_of_responsibility_demo.cpp)
add_executable(command_demo command_demo.cpp)
add_executable(interpreter_demo interpreter_demo.cpp)
add_executable(iterator_pattern_demo iterator_pattern_demo.cpp)
add_executable(mediator_demo mediator_demo.cpp)
add_executable(memento_demo memento_demo.cpp)
add_executable(observer_demo observer_demo.cpp)
add_executable(state_demo state_demo.cpp)
add_executable(strategy_demo strategy_demo.cpp)
add_executable(template_method_demo template_method_demo.cpp)
add_executable(visitor_demo visitor_demo.cpp)
